# wide-db

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
wdb-cli/: Cargo.toml
wdb-core/: Cargo.toml
wdb-core/src/: app_controller.rs  lib.rs  module.rs  storage_engine.rs
wdb-engine-default/: Cargo.toml
wdb-engine-default/src/: lib.rs  storage_paths.rs
wdb-engine-default/src/fs_controller/: storage_paths.rs
wdb-engine-default/src/table/: table.rs
wdb-engine-default/src/utils/: memtable.rs  mod.rs  table_id.rs
wdb-fs-default/: Cargo.toml
wdb-fs-default/src/: lib.rs
wdb-grpc/: Cargo.toml  build.rs
wdb-grpc/protos/: create-table.proto  list-tables.proto  mutate-row.proto  read-row.proto  types.proto  widedb.proto
wdb-server/: Cargo.toml
wdb-server/src/: grpc_server.rs  main.rs  server.rs  server_ctx.rs
wdb-server/src/grpc/: grpc_api.rs  handlers_service.rs  mod.rs
wdb-server/src/grpc/handlers/: create_table.rs  mod.rs  read_row.rs  row_mutate.rs
wdb-server/src/modules/: grpc_api.rs  mod.rs
wdb-storage-engine/: Cargo.toml
wdb-storage-engine/src/: cell.rs  delete_tracker.rs  flush_agent.rs  key_value.rs  kv_scanner.rs  lib.rs  memtable.rs  operations.rs  persistance_layer.rs  row_filter.rs  row_lock.rs  row_mutation.rs  row_result.rs  storage_engine.rs
wdb-storage-engine/src/disk_ctl/: mod.rs  thread_ctx.rs
wdb-storage-engine/src/disk_ctl/sstable/: mod.rs  writer.rs
wdb-storage-engine/src/fs_controller/: mod.rs
wdb-storage-engine/src/fs_controller/structs/: mod.rs
wdb-storage-engine/src/fs_persistance/: fs_persistance.rs  mod.rs  storage_paths.rs
wdb-storage-engine/src/memstore_ctl/: kv.rs  memstore.rs  mod.rs  thread_ctx.rs
wdb-storage-engine/src/row_mutation/: mod.rs  row_mutation.rs  row_mutation_executor.rs  row_mutation_op.rs
wdb-storage-engine/src/row_scanner/: mod.rs  row_scanner.rs
wdb-storage-engine/src/row_scanner/row_filter/: mod.rs  prefix_row_filter.rs  range_row_filter.rs  single_row_filter.rs
wdb-storage-engine/src/table/: mod.rs  table.rs  table_family.rs
wdb-storage-engine/src/utils/: cell.rs  hashed_bytes.rs  memtable.rs  mod.rs  timestamp.rs
wdb-storage-engine/src/utils/sstable/: data_block.rs  mod.rs  sstable.rs  sstable_compactor.rs  sstable_reader.rs  sstable_writer.rs
wdb-storage-engine/tests/: flush-scan-test1.rs  in-memory.rs  in-memory1.rs  scan-test1.rs  test1.rs
wdb-storage-engine/tests/utils/: memory_persistance.rs  mod.rs  user_data_generator.rs
(+11 files in other folders)
