[package]
name = "wdb-engine-default"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { name  = "1.8.0", features = ["v7"] }
wdb-core = { path = "../wdb-core" }
