[package]
name = "wdb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
wdb-grpc = { path = "../wdb-grpc" }
wdb-core = { path = "../wdb-core" }
wdb-fs-default = { path = "../wdb-fs-default"}
wdb-engine-default = { path = "../wdb-engine-default" }
tonic-reflection = "0.11.0"
