[package]
name = "wdb-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
wdb-grpc = { path = "../wdb-grpc" }
wdb-storage-engine = { path = "../wdb-storage-engine" }
tonic-reflection = "0.11.0"
log = "0.4.21"
env_logger = "0.11.3"
bytes = "1.6.0"
