[package]
name = "wdb-storage-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.7.1"
bincode = "1.3.3"
bytes = { version = "1.6.0", features = ["serde"] }
crossbeam-skiplist = "0.1.3"
dashmap = "5.5.3"
itertools = "0.13.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
uuid = { name  = "1.8.0", features = ["v7"] }

[dev-dependencies]
rand = "0.8.5"
